--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
                 </ul>
             </nav>
-            <img src="download.png" width="30px" height="30px">
+            <img src="./download.png" width="30px" height="30px">
             <img src="./images.png" class="menu-icon" onclick="menutoggle()">
 
         </div>
