--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="small-container">
             <div class="row">
             <div class="col-3">
-                <img src="featured.jpg">
+                <img src="./featured.jpg">
             </div>
             <div class="col-3">
                 <img src="./10-8050-black-red-waan-black-red-original-imag5psezyhhwwks-bb.webp">
